--- a/map_game/pubspec.yaml
+++ b/map_game/pubspec.yaml
@@ -20,7 +20,9 @@ dependencies:
   flutter:
     sdk: flutter
   google_maps_flutter: ^0.5.25+3
+  geolocator: ^5.3.1
   provider: ^4.0.5
+  font_awesome_flutter: ^8.8.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -56,17 +58,16 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Alef
+      fonts:
+        - asset: assets/fonts/Alef_Regular.ttf
+    - family: Ezra
+      fonts:
+        - asset: assets/fonts/Ezra_SIL.ttf
+    - family: Shofar
+      fonts:
+        - asset: assets/fonts/Shofar_Regular.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
