--- a/map_game/pubspec.yaml
+++ b/map_game/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   geolocator: ^5.3.1
   provider: ^4.0.5
   font_awesome_flutter: ^8.8.1
+  shared_preferences: ^0.5.6+3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
