--- a/map_game/pubspec.yaml
+++ b/map_game/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   provider: ^4.0.5
   font_awesome_flutter: ^8.8.1
   shared_preferences: ^0.5.6+3
+  fluster: ^1.1.2
+  cloud_firestore: ^0.13.5
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
