--- a/map_game/pubspec.yaml
+++ b/map_game/pubspec.yaml
@@ -29,11 +29,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  flutter_native_splash: ^0.1.9
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+flutter_native_splash:
+    image: assets/splash.png
+    color: "052438"
+    fill: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
